--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -101,12 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "db89af89-bef0-465c-a6ae-7e8a7d352982",
    "metadata": {},
    "outputs": [],
    "source": [
     "# solution -> backtracking\n",
+    "# time complexity: O(n * 2^n)\n",
+    "# space complexity: O(n)\n",
     "\n",
     "class Solution:\n",
     "    def subsets(self, nums: List[int]) -> List[List[int]]:\n",
@@ -274,12 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "bf5ca7d2-014a-412a-b3e3-32ddebd20c51",
    "metadata": {},
    "outputs": [],
    "source": [
     "# solution\n",
+    "# time complexity: O(2^(t/m))\n",
+    "# space complexity: O(t/m)\n",
     "\n",
     "class Solution:\n",
     "    def combinationSum(self, nums: List[int], target: int) -> List[List[int]]:\n",
@@ -330,6 +334,119 @@
     "2. remove the number just added, and go into the next recursion with the next number, incrementing your pointer by 1 (i + 1) and leaving your total unchanged. if our input list is [2,3,6,7] the call will look like: dfs(i = 0 + 1, cur = [], total = 0)\n",
     "\n",
     "![neetcode39.png](attachment:8047027b-e119-4741-84a7-9d9d0463a0e6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35abc402-e714-4ba8-8e6a-23a9115d541a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 40. Combination Sum II (medium)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31857733-ac31-4856-8aff-bcf937d0f0fc",
+   "metadata": {},
+   "source": [
+    "Given a collection of candidate numbers (candidates) and a target number (target), find all unique combinations in candidates where the candidate numbers sum to target.\n",
+    "\n",
+    "Each number in candidates may only be used once in the combination.\n",
+    "\n",
+    "Note: The solution set must not contain duplicate combinations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "862f8489-a055-4a35-a86b-9af9d30db575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "class Solution:\n",
+    "    def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:\n",
+    "        candidates.sort()\n",
+    "\n",
+    "        res = []\n",
+    "\n",
+    "        def dfs(i, cur, total):\n",
+    "            if total == target and cur not in res:\n",
+    "                res.append(cur.copy())\n",
+    "                return\n",
+    "            if i >= len(candidates) or total > target:\n",
+    "                return\n",
+    "\n",
+    "            cur.append(candidates[i])\n",
+    "            # keep current numbers and add following ones\n",
+    "            dfs(i+1, cur, total + candidates[i])\n",
+    "            # backtrack\n",
+    "            cur.pop()\n",
+    "            dfs(i+1, cur, total)\n",
+    "\n",
+    "\n",
+    "        dfs(0, [], 0)\n",
+    "        return res\n",
+    "    \n",
+    "# status = failure\n",
+    "# NOTE: it actually works but getting TLE (passing 172/176 test cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "95ad9221-a5ca-487a-810d-67d23f6d3dc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "# time complexity: O(n * 2^n)\n",
+    "# space complexity: O(n)\n",
+    "\n",
+    "class Solution:\n",
+    "    def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:\n",
+    "        res = []\n",
+    "        candidates.sort()\n",
+    "\n",
+    "        def dfs(i, cur, total):\n",
+    "            # optimization makes it so there's also no duplicate combinations\n",
+    "            if total == target:\n",
+    "                res.append(cur.copy())\n",
+    "                return\n",
+    "            if total > target or i == len(candidates):\n",
+    "                return\n",
+    "            \n",
+    "            # include candidates[i]\n",
+    "            cur.append(candidates[i])\n",
+    "            dfs(i + 1, cur, total + candidates[i])\n",
+    "            # skip candidates[i]\n",
+    "            cur.pop()\n",
+    "            # optimization needed to avoid the TLE and duplicates\n",
+    "            while i + 1 < len(candidates) and candidates[i] == candidates[i+1]:\n",
+    "                i += 1\n",
+    "            dfs(i + 1, cur, total)\n",
+    "            \n",
+    "        dfs(0, [], 0)\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ddfedda-1bf7-442e-a406-fb1b891c7f50",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: i was actually quite close to the a working solution, but my backtracking portion needed additional logic to work. this problem is very similar to problem 39. -> almost the same logic and intuition can be used. a small detail worth mentioning is that for this problem you do want to sort your input list before doing the recursion, which is important to avoid duplicate combinations.\n",
+    "\n",
+    "once again you are using a recursive dfs function which keeps track of 3 things: \"i\" which is the pointer, \"cur\" which is a list of your list of current numbers, and \"total\" which is the sum of the numbers in cur. there is also two possible decisions each recursion. after adding a number to your cur list, you can either decide to:\n",
+    "1. add the next number by incrementing your pointer and adding to the total\n",
+    "2. remove the number just added and go to the next number\n",
+    "\n",
+    "this is very similar as question 39. except this time your incrementing your i pointer for both decision. there is also an optimization needed to avoid getting a TLE on leetcode: in your backtracking section, after removing the number that was just added, you need a while loop that increments your pointer until the next number is different from the one that was just removed (which makes sense since if you've got a working combination you don't want the same combination with the same number at a different index, and if the previous combination didn't work readding the same number from a different index also won't produce a valid result)"
    ]
   },
   {
