--- a/neetcode250.ipynb
+++ b/neetcode250.ipynb
@@ -46,7 +46,10 @@
   {
    "cell_type": "markdown",
    "id": "87a37df4-7547-4aaa-9609-1bcd1f6a4c01",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 682. Baseball game (easy)"
    ]
@@ -182,6 +185,134 @@
     "#### explanation\n",
     "\n",
     "my own: this problem is very straighforward but is made easy because the input is guaranteed to be valid. the neetcode solution is the same as my improved solution (his is less verbose)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d67af70-2abe-4294-b235-7a73c604208e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 225. Implement Stack Using Queues (easy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1f59b1-56e6-458e-8f47-8783e71b502f",
+   "metadata": {},
+   "source": [
+    "Implement a last-in-first-out (LIFO) stack using only two queues. The implemented stack should support all the functions of a normal stack (push, top, pop, and empty).\n",
+    "\n",
+    "Implement the MyStack class:\n",
+    "\n",
+    "* void push(int x) Pushes element x to the top of the stack.\n",
+    "* int pop() Removes the element on the top of the stack and returns it.\n",
+    "* int top() Returns the element on the top of the stack.\n",
+    "* boolean empty() Returns true if the stack is empty, false otherwise.\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "* You must use only standard operations of a queue, which means that only push to back, peek/pop from front, size and is empty operations are valid.\n",
+    "* Depending on your language, the queue may not be supported natively. You may simulate a queue using a list or deque (double-ended queue) as long as you use only a queue's standard operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1c0c02e5-5847-4763-bc4d-ac4ecefa8e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class MyStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.stack = []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.stack.append(x)\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        element = self.stack.pop()\n",
+    "        return element\n",
+    "\n",
+    "    def top(self) -> int:\n",
+    "        if self.stack:\n",
+    "            element = self.stack[-1]\n",
+    "            return element\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        if len(self.stack) == 0:\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "# status = success\n",
+    "# NOTE: not sure what they meant by only using two queues? also didn't learn much with this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fd99fb9e-954c-42e1-bc82-66a29834e140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "# time complexity: O(1) for init and pop, O(n) for push\n",
+    "# space complexity: O(n)\n",
+    "\n",
+    "class MyStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # double ended queue, but not using advanced features for this\n",
+    "        self.q = deque()\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.q.append(x)\n",
+    "        for _ in range(len(self.q) - 1):\n",
+    "            self.q.append(self.q.popleft())\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        return self.q.popleft()\n",
+    "\n",
+    "    def top(self) -> int:\n",
+    "        return self.q[0]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        return len(self.q) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11a1687b-39bc-43b2-99c4-770ebc1f6dcb",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: this problem is looking at LIFO queues (last in first out), as opposed to FIFO queues (first in first out) which i'm sure more used to. this neetcode solution is also quite different from the video... i'm not sure why.\n",
+    "\n",
+    "in this solution we're using a double ended queue (deque()) but because of the problem description we aren't going to use all of its feature. this queue looks like it's meant to hold the last added number at index 0, aka we're supposed to append left. \n",
+    "\n",
+    "* pop(self)\n",
+    "\n",
+    "very straighforward, we can use popleft() which will pop the element at the beginning of the stack, which will be the last number added\n",
+    "\n",
+    "* top(self)\n",
+    "\n",
+    "also very straightforward. as mentionned, the last element added will be at the beginning of the stack, so we return the element at index 0\n",
+    "\n",
+    "* empty(self)\n",
+    "\n",
+    "super easy as well... just check the length of the queue\n",
+    "\n",
+    "* push(self, x)\n",
+    "\n",
+    "the only one with a bit more to it. we begin by adding the new number at the end of the stack using append. then we need to switch it's position to be the first element. we do that using a simple for loop, which iterates for the range of the queue -1 because we don't want to pop the last element we added. pop from the left and use the popped value and append it the queue. the result will be your stack is reorganized to have the elements added last at the beginning of the stack and older elements at the end of the stack"
    ]
   }
  ],
