--- a/neetcode250.ipynb
+++ b/neetcode250.ipynb
@@ -314,6 +314,147 @@
     "\n",
     "the only one with a bit more to it. we begin by adding the new number at the end of the stack using append. then we need to switch it's position to be the first element. we do that using a simple for loop, which iterates for the range of the queue -1 because we don't want to pop the last element we added. pop from the left and use the popped value and append it the queue. the result will be your stack is reorganized to have the elements added last at the beginning of the stack and older elements at the end of the stack"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c2c653b-ad6f-413b-b01f-cc201bb90161",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 232. Implement Queue using Stacks (easy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78bf65a5-e350-472a-b9de-dbf12ca72cf4",
+   "metadata": {},
+   "source": [
+    "Implement a first in first out (FIFO) queue using only two stacks. The implemented queue should support all the functions of a normal queue (push, peek, pop, and empty).\n",
+    "\n",
+    "Implement the MyQueue class:\n",
+    "\n",
+    "* void push(int x) Pushes element x to the back of the queue.\n",
+    "* int pop() Removes the element from the front of the queue and returns it.\n",
+    "* int peek() Returns the element at the front of the queue.\n",
+    "* boolean empty() Returns true if the queue is empty, false otherwise.\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "* You must use only standard operations of a stack, which means only push to top, peek/pop from top, size, and is empty operations are valid.\n",
+    "* Depending on your language, the stack may not be supported natively. You may simulate a stack using a list or deque (double-ended queue) as long as you use only a stack's standard operations.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d2cb7e9e-e3bf-4248-bbbd-78fcaa91b98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class MyQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.q = deque()\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.q.append(x)\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        return self.q.popleft()\n",
+    "\n",
+    "    def peek(self) -> int:\n",
+    "        return self.q[0]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        if len(self.q) == 0:\n",
+    "            return True\n",
+    "        return False  \n",
+    "    \n",
+    "# status = success\n",
+    "# NOTE: kinda cheating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0af41baf-30c9-4b37-b6e8-4cccfdb9cf5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt 2\n",
+    "\n",
+    "class MyQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.q = []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.q.append(x)\n",
+    "        for i in range(len(self.q) - 1):\n",
+    "            self.q.append(self.q.pop())\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        return self.q.pop(0)\n",
+    "\n",
+    "    def peek(self) -> int:\n",
+    "        return self.q[0]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        if len(self.q) == 0:\n",
+    "            return True\n",
+    "        return False        \n",
+    "\n",
+    "# status = success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e5fc356a-ca2b-4d93-89f6-fde91874ccfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "# time complexity: O(1) for init, O(1) for push() and empty(), O(1) amortized for pop() and peek()\n",
+    "\n",
+    "class MyQueue:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.s1 = []\n",
+    "        self.s2 = []\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        self.s1.append(x)\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        if not self.s2:\n",
+    "            while self.s1:\n",
+    "                self.s2.append(self.s1.pop())\n",
+    "        return self.s2.pop()\n",
+    "\n",
+    "    def peek(self) -> int:\n",
+    "        if not self.s2:\n",
+    "            while self.s1:\n",
+    "                self.s2.append(self.s1.pop())\n",
+    "        return self.s2[-1]\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        return max(len(self.s1), len(self.s2)) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42eaaf7f-5846-4428-80f2-1bc5eb64f963",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: the neetcode solution uses two stacks, since apparently you're not allowed to index - only push and pop (even though peek() still indexes?). this solution does essentially the same as my reworked solution but using two stacks: the first stack s1 simply has things pushed to it, but the order of elements is reversed in the the second stack s2 and is used for pop() and peek() operations. since every push and pop assumes that the last element in the s2 stack was the first one added in the s1 stack, you only need to do the reversing operation when s2 is found to be empty - because of this the stacks s1 and s2 could be of varying lengths, and empty() only returns true if the max length of both stacks is equal to 0"
+   ]
   }
  ],
  "metadata": {
