--- a/neetcode250.ipynb
+++ b/neetcode250.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d02f3485-1d59-4aab-b034-2922460fa125",
    "metadata": {},
    "outputs": [],
@@ -454,6 +454,104 @@
     "#### explanation\n",
     "\n",
     "my own: the neetcode solution uses two stacks, since apparently you're not allowed to index - only push and pop (even though peek() still indexes?). this solution does essentially the same as my reworked solution but using two stacks: the first stack s1 simply has things pushed to it, but the order of elements is reversed in the the second stack s2 and is used for pop() and peek() operations. since every push and pop assumes that the last element in the s2 stack was the first one added in the s1 stack, you only need to do the reversing operation when s2 is found to be empty - because of this the stacks s1 and s2 could be of varying lengths, and empty() only returns true if the max length of both stacks is equal to 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e60f585-7721-4959-9a6d-20e7ea253f6b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 735. Asteroid Collision (medium)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "632fd2b4-e387-4f3e-b87d-d2d073e4383d",
+   "metadata": {},
+   "source": [
+    "We are given an array asteroids of integers representing asteroids in a row. The indices of the asteriod in the array represent their relative position in space.\n",
+    "\n",
+    "For each asteroid, the absolute value represents its size, and the sign represents its direction (positive meaning right, negative meaning left). Each asteroid moves at the same speed.\n",
+    "\n",
+    "Find out the state of the asteroids after all collisions. If two asteroids meet, the smaller one will explode. If both are the same size, both will explode. Two asteroids moving in the same direction will never meet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "96f43221-f9fc-4ea2-93e0-7fcb2d0e65b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class Solution:\n",
+    "    def asteroidCollision(self, asteroids: List[int]) -> List[int]:\n",
+    "        # positive = right, negative = left\n",
+    "        right_stack = []\n",
+    "        remaining = []\n",
+    "        \n",
+    "        for i in asteroids:\n",
+    "            if i > 0: # asteroid is going right\n",
+    "                right_stack.append(i)\n",
+    "            else: # asteroid is going left\n",
+    "                while right_stack and abs(i) > right_stack[-1]: # left asteroid continues to destroy smaller asteroids going right\n",
+    "                    right_stack.pop()\n",
+    "\n",
+    "                if right_stack and abs(i) < right_stack[-1]: # left asteroid gets destroyed by right asteroid\n",
+    "                    continue\n",
+    "                elif right_stack and abs(i) == right_stack[-1]: # both asteroids gets destroyed\n",
+    "                    right_stack.pop()\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    remaining.append(i) # big left asteroid destroyed all the asteroids going right. no one will catch up to him\n",
+    "        \n",
+    "        # all surviving left going asteroids + right going asteroids with no more opposition\n",
+    "        return remaining + right_stack\n",
+    "    \n",
+    "# status = success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "337d6b78-f08f-4ce5-876c-2609768e3ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "# time complexity: O(n)\n",
+    "# space complexity: O(n)\n",
+    "\n",
+    "class Solution:\n",
+    "    def asteroidCollision(self, asteroids: List[int]) -> List[int]:\n",
+    "        stack = []\n",
+    "        for a in asteroids:\n",
+    "            while stack and a < 0 and stack[-1] > 0:\n",
+    "                diff = a + stack[-1]\n",
+    "                if diff < 0:\n",
+    "                    stack.pop()\n",
+    "                elif diff > 0:\n",
+    "                    a = 0\n",
+    "                else:\n",
+    "                    a = 0\n",
+    "                    stack.pop()\n",
+    "            if a:\n",
+    "                stack.append(a)\n",
+    "        return stack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "770b2437-2f95-47a9-a368-6b431f184a5a",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "neetcode solution uses similar logic as mine but is more efficient because it only uses 1 stack"
    ]
   }
  ],
