added new section

--- a/neetcode150Cont.ipynb
+++ b/neetcode150Cont.ipynb
@@ -1658,6 +1658,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcbec58f-0b29-4ca3-8718-591787b2b06b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# 7. Greedy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51bff361-84d2-4553-97e9-15567574800a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
